--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "license": "ISC",
   "description": "",
   "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1"
   }
 }
